# bitchain

./: AGENT.md  Cargo.toml  Makefile  README.md  bitchain-schema.json
.github/workflows/: ci.yml
src/: main.rs
