[package]
name = "bitchain"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
reqwest = { version = "0.11", features = ["json"] }
